# sap-ai-agent-hybrid-rag

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/plans/: agent-chat-rag.md  prd-implement-rag.md
app/: config.py  database.py  main.py
app/agent/: agent.py  context_var.py  memory.py  prompts.py  tools.py
app/attachments/: image_processor.py  pdf_processor.py
app/ingestion/: chunker.py  embedder.py  extractor.py  parser.py
app/models/: chat.py
app/retrieval/: context.py  hybrid.py  rrf.py
app/routers/: chat.py  ingest.py  query.py
scripts/: reset_db.py  schema.sql
skill-cds-documentation/: cds-behavior-analysis.md  cds-context-inference.md  cds-doc-analysis.md  cds-doc-generator.md  cds-structural-analysis.md
web/: CHANGELOG.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.tsx  index.css
web/src/components/chat/: assistant-message.tsx  chat-input.tsx  message-list.tsx  sources-panel.tsx  thinking-panel.tsx  tool-badge.tsx  user-message.tsx
web/src/components/home/: home-input.tsx  suggestion-chips.tsx
web/src/components/layout/: nav-sidebar.tsx
web/src/components/ui/: button.tsx
web/src/hooks/: use-chat.ts  use-sessions.ts
web/src/lib/: api.ts  sessions.ts  types.ts
web/src/pages/: analytics-page.tsx  chat-page.tsx  chats-page.tsx  home-page.tsx  skills-page.tsx
web/src/pages/_layouts/: app-layout.tsx
